test/ddc-spec/error/01-ErrorExp/08-UndefinedCtor/Test.ds

module Test where

foo = Bar
