test/ddc-spec/error/01-ErrorExp/08-UndefinedCtor/Test.error.check
Error in transformed module.
  in stage SourceLoadText
  in pipe  PipeCoreCheck/Check
  test/ddc-spec/error/01-ErrorExp/08-UndefinedCtor/Test.ds:4:1
  Undefined data constructor: Bar
